@@ -1,7 +1,10 @@
 Changes file for DateTime::Incomplete
 
 0.0101  2003-11-03
-- fixed an infinite loop in _format_nanoseconds.   Patch by Rick Measham
+- there is no set_locale() in DateTime.   
+  Modified from a patch by Rick Measham
+- fixed an infinite loop in _format_nanoseconds.   
+  Patch by Rick Measham
 
 0.01  2003-11-01
 - documentation revision, by Dave Rolsky
